[package]
name = "apk"
version = "0.1.0"
authors = ["Falk Höppner <falk@hoppner.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemet = { path = "../systemet" }
tera = "1.5"
secrecy = "0.7"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
warp = "0.2"
serde_json = "1.0"
serde = "1.0"
